--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"name": "file-loader",
-	"version": "0.1.2",
+	"version": "0.5.0",
 	"author": "Tobias Koppers @sokra",
 	"description": "file loader module for webpack",
+	"dependencies": {
+		"loader-utils": "0.2.x"
+	},
 	"licenses": [
 		{
 			"type": "MIT",
 			"url": "http://www.opensource.org/licenses/mit-license.php"
 		}
-	],
-	"license": "MIT"
+	]
 }
