--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 	"dependencies": {
 		"loader-utils": "0.2.x"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:webpack/file-loader.git"
+	},
 	"licenses": [
 		{
 			"type": "MIT",
