Add base26+32+36+49+52+58+62 encodings, make base64 URL-safe

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"devDependencies": {
 		"should": "~4.0.4",
-		"mocha": "~1.21.3"
+		"mocha": "~1.21.3",
+		"bignum": "~0.9.0"
 	},
 	"scripts": {
 		"test": "mocha -R spec"
