--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"author": "Tobias Koppers @sokra",
 	"description": "file loader module for webpack",
 	"dependencies": {
-		"loader-utils": "0.2.x",
+		"loader-utils": "0.2.x"
+	},
+	"optionalDependencies": {
 		"bignum": "~0.9.0"
 	},
 	"devDependencies": {
