npmignore non-essential files

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.7.2",
 	"author": "Tobias Koppers @sokra",
 	"description": "file loader module for webpack",
+	"files": [
+		"index.js"
+	]
 	"dependencies": {
 		"loader-utils": "0.2.x"
 	},
