--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
 	"author": "Tobias Koppers @sokra",
 	"description": "file loader module for webpack",
 	"dependencies": {
-		"loader-utils": "0.2.x"
-	},
-	"optionalDependencies": {
-		"bignum": "~0.9.0"
+		"loader-utils": "~0.2.5"
 	},
 	"devDependencies": {
 		"should": "~4.0.4",
