Forgot to add locals.js to the package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Tobias Koppers @sokra",
   "description": "file loader module for webpack",
   "files": [
-    "index.js"
+    "index.js",
+    "locals.js"
   ],
   "dependencies": {
     "loader-utils": "~0.2.5"
