--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 # development
 /node_modules
 /coverage
-*.log
 
-# dotfiles
-.*
-!.gitignore
-*~
-*#*
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+.eslintcache
+/dist
+/local
+/reports
+.DS_Store
+Thumbs.db
+.idea
+.vscode
+*.sublime-project
+*.sublime-workspace
