chore(package): update for defaults 0.2.0

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,25 @@
 {
   "presets": [
-    "webpack",
-    "jest"
-  ]
+    [
+      "env",
+      {
+        "modules": false,
+        "useBuiltIns": true,
+        "targets": {
+          "node": 4.3
+        },
+        "exclude": [
+          "transform-async-to-generator",
+          "transform-regenerator"
+        ]
+      }
+    ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        "env"
+      ]
+    }
+  }
 }
