--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-cli": "^6.23.0",
     "babel-jest": "^19.0.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-webpack": "^1.0.0",
+    "babel-preset-env": "^1.2.0",
     "cross-env": "^3.2.3",
     "del-cli": "^0.2.1",
     "eslint": "^3.17.0",
@@ -26,12 +26,12 @@
     "nsp": "^2.6.2",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack-defaults": "^0.1.1"
+    "webpack-defaults": "^0.2.0"
   },
   "scripts": {
     "test": "jest",
     "travis:test": "yarn run test",
-    "release": "standard-version",
+    "release": "yarn run standard-version",
     "webpack-defaults": "webpack-defaults",
     "prepublish": "yarn run build",
     "prebuild": "yarn run clean:dist",
@@ -43,7 +43,7 @@
     "security": "nsp check",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
     "travis:coverage": "yarn run test:coverage",
-    "travis:lint": "yarn run lint && yarn run nsp",
+    "travis:lint": "yarn run lint && yarn run security",
     "lint-staged": "lint-staged"
   },
   "repository": {
