chore(babel): update for cjs proxy
 - It is no longer necessary to transpile es6 to cjs

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     [
       "env",
       {
-        "modules": "commonjs",
+        "modules": false,
         "useBuiltIns": true,
         "targets": {
           "node": 4.3
