--- a/examples/use-relative-path/package.json
+++ b/examples/use-relative-path/package.json
@@ -2,13 +2,17 @@
   "name": "use-relative-path",
   "author": "@adriancmiranda",
   "scripts": {
-    "start": "webpack --env.dev",
+    "dev": "webpack-dev-server --hot --inline --env.dev",
+    "prebuild": "rimraf dist/",
     "build": "webpack -p"
   },
   "optionalDependencies": {
     "css-loader": "0.28.0",
     "extract-text-webpack-plugin": "2.1.0",
-    "style-loader": "0.16.1"
+    "html-webpack-plugin": "2.28.0",
+    "rimraf": "2.6.1",
+    "style-loader": "0.16.1",
+    "webpack-dev-server": "2.4.2"
   },
   "devDependencies": {
     "webpack": "2.4.1"
