--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "standard-version": "^4.0.0"
   },
   "scripts": {
-    "test": "mocha -R spec",
+    "test": "mocha \"test/[!examples]*.test.js\"",
     "travis:test": "npm run test",
     "release": "standard-version",
-    "build:examples": "cd examples && node build-all.js"
+    "build:examples": "cd examples && node build-all.js",
+    "examples:test": "mocha \"test/examples.test.js\""
   },
   "repository": {
     "type": "git",
