feat: Apply webpack-defaults v1.x
 - Retains index.js file history
 - Assumes proposed change to npm@5
 - Assumes proposed appveyor proposal

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,17 @@
 !.gitignore
 *~
 *#*
+
+logs
+npm-debug.log*
+yarn-debug.log*
+.eslintcache
+/dist
+/local
+/reports
+.DS_Store
+Thumbs.db
+.idea
+.vscode
+*.sublime-project
+*.sublime-workspace
