--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,27 +1,35 @@
-# appveyor file
-# http://www.appveyor.com/docs/appveyor-yml
+branches:
+  only:
+    - master
 
 init:
   - git config --global core.autocrlf input
 
-# what combinations to test
 environment:
   matrix:
-    - nodejs_version: 0.10
-    - nodejs_version: 0.11
-
-# combinations having this can fail
-matrix:
-  allow_failures:
-    - nodejs_version: 0.11
+    - nodejs_version: 8
+      webpack_version: 2.6.0
+      job_part: test
+    - nodejs_version: 6
+      webpack_version: 2.6.0
+      job_part: test
+    - nodejs_version: 4.3
+      webpack_version: 2.6.0
+      job_part: test
 
 install:
-  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)
+  - ps: Install-Product node $env:nodejs_version x64
   - npm install
 
 build: off
-  
+
+matrix:
+  fast_finish: true
+
+before_test:
+  - cmd: npm install webpack@^%webpack_version%
+
 test_script:
   - node --version
   - npm --version
-  - cmd: npm test
+  - cmd: npm run appveyor:%job_part%
