--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,14 @@ matrix:
       node_js: '8'
       env: WEBPACK_VERSION="2.6.0" JOB_PART=coverage
 before_install:
+  - 'if [[ `npm -v` != 5* ]]; then npm i -g npm@^5.0.0; fi'
   - nvm --version
   - node --version
   - npm --version
 before_script:
   - |-
     if [ "$WEBPACK_VERSION" ]; then
-      npm i -g webpack@^$WEBPACK_VERSION
+      npm i --no-save webpack@^$WEBPACK_VERSION
     fi
 script:
   - 'npm run travis:$JOB_PART'
