ci(travis): Serial tests execution in travis

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "release": "npm run standard-version",
     "security": "nsp check",
     "test": "jest",
-    "travis:test": "npm run test",
+    "travis:test": "npm run test -- --runInBand",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage --runInBand",
     "travis:lint": "npm run lint && npm run security",
     "travis:coverage": "npm run test:coverage",
     "webpack-defaults": "webpack-defaults"
@@ -45,7 +45,6 @@
     "eslint-plugin-import": "^2.3.0",
     "jest": "^20.0.4",
     "lint-staged": "^3.6.0",
-    "mocha": "~1.21.3",
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "should": "~4.0.4",
