--- a/package.json
+++ b/package.json
@@ -26,26 +26,27 @@
     "nsp": "^2.6.2",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack-defaults": "^0.4.5"
+    "webpack-defaults": "^1.1.1"
   },
   "scripts": {
-    "test": "jest",
-    "travis:test": "yarn run test",
-    "release": "yarn run standard-version",
-    "webpack-defaults": "webpack-defaults",
-    "prepublish": "yarn run build",
-    "prebuild": "yarn run clean:dist",
+    "release": "npm run standard-version",
+    "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
+    "clean": "del-cli dist",
     "clean:dist": "del-cli dist",
-    "start": "yarn run serve:dev src",
-    "serve:dev": "nodemon $2 --exec babel-node",
     "lint": "eslint --cache src test",
-    "security": "nsp check",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:coverage": "yarn run test:coverage",
-    "travis:lint": "yarn run lint && yarn run security",
     "lint-staged": "lint-staged",
-    "test:watch": "jest --watch"
+    "prepublish": "npm run build",
+    "prebuild": "npm run clean",
+    "security": "nsp check",
+    "serve:dev": "nodemon $2 --exec babel-node",
+    "test": "jest",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "test:watch": "jest --watch",
+    "travis:coverage": "npm run test:coverage -- --runInBand",
+    "travis:test": "npm run test -- --runInBand",
+    "travis:lint": "npm run lint && npm run security",
+    "webpack-defaults": "webpack-defaults"
   },
   "repository": {
     "type": "git",
