chore: Update lock file

--- a/package.json
+++ b/package.json
@@ -10,26 +10,24 @@
     "loader-utils": "^1.0.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-jest": "^19.0.0",
+    "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.2.0",
-    "cross-env": "^3.2.3",
-    "del-cli": "^0.2.1",
-    "eslint": "^3.17.0",
-    "eslint-config-webpack": "^1.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "jest": "^19.0.2",
-    "lint-staged": "^3.3.1",
-    "nodemon": "^1.11.0",
-    "nsp": "^2.6.2",
+    "babel-preset-env": "^1.5.1",
+    "cross-env": "^5.0.0",
+    "del-cli": "^1.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-webpack": "^1.2.3",
+    "eslint-plugin-import": "^2.3.0",
+    "jest": "^20.0.4",
+    "lint-staged": "^3.6.0",
+    "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
     "webpack-defaults": "^1.1.1"
   },
   "scripts": {
-    "release": "npm run standard-version",
     "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
     "clean": "del-cli dist",
@@ -38,8 +36,8 @@
     "lint-staged": "lint-staged",
     "prepublish": "npm run build",
     "prebuild": "npm run clean",
+    "release": "standard-version",
     "security": "nsp check",
-    "serve:dev": "nodemon $2 --exec babel-node",
     "test": "jest",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
     "test:watch": "jest --watch",
