--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack-defaults": "^1.1.1"
+    "webpack-defaults": "^1.3.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
+    "appveyor:test": "npm run test",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
     "clean": "del-cli dist",
     "clean:dist": "del-cli dist",
@@ -59,6 +60,9 @@
     "test": "test"
   },
   "license": "MIT",
+  "peerDependencies": {
+    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
+  },
   "engines": {
     "node": ">= 4.3 < 5.0.0 || >= 5.10"
   },
