--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "standard-version": "^4.0.0",
     "webpack-defaults": "^1.3.0"
   },
+  "peerDependencies": {
+    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
+  },
   "scripts": {
     "start": "npm run build -- -w",
     "appveyor:test": "npm run test",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
     "clean": "del-cli dist",
-    "clean:dist": "del-cli dist",
     "lint": "eslint --cache src test",
     "lint-staged": "lint-staged",
     "prepublish": "npm run build",
@@ -40,8 +42,8 @@
     "release": "standard-version",
     "security": "nsp check",
     "test": "jest",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
     "travis:coverage": "npm run test:coverage -- --runInBand",
     "travis:test": "npm run test -- --runInBand",
     "travis:lint": "npm run lint && npm run security",
