Add storageSingleton and assetsManifestPlugin

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-loader",
+  "name": "@nadiia/file-loader",
   "version": "1.0.0-beta.1",
   "author": "Tobias Koppers @sokra",
   "description": "file loader module for webpack",
