--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-loader",
-  "version": "1.0.0-rc.0",
+  "version": "1.0.0",
   "author": "Tobias Koppers @sokra",
   "description": "file loader module for webpack",
   "files": [
