--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dist"
   ],
   "dependencies": {
-    "loader-utils": "^1.0.2",
-    "webpack": "^3.5.4"
+    "loader-utils": "^1.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -26,7 +25,8 @@
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack-defaults": "^1.3.0"
+    "webpack-defaults": "^1.3.0",
+    "webpack": "^3.5.4"
   },
   "peerDependencies": {
     "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
