--- a/package.json
+++ b/package.json
@@ -11,30 +11,29 @@
   "files": [
     "dist"
   ],
-  "directories": {
-    "test": "test"
-  },
   "dependencies": {
     "loader-utils": "^1.0.2",
     "schema-utils": "^0.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-jest": "^20.0.3",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
+    "babel-cli": "^6.0.0",
+    "babel-jest": "^21.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.0.0",
+    "babel-polyfill": "^6.0.0",
+    "babel-preset-env": "^1.0.0",
     "cross-env": "^5.0.0",
+    "del": "^3.0.0",
     "del-cli": "^1.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-webpack": "^1.2.3",
-    "eslint-plugin-import": "^2.3.0",
-    "jest": "^20.0.4",
-    "lint-staged": "^3.6.0",
-    "nsp": "^2.6.3",
-    "pre-commit": "^1.2.2",
+    "eslint": "^4.0.0",
+    "eslint-config-webpack": "^1.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "jest": "^21.0.0",
+    "lint-staged": "^5.0.0",
+    "memory-fs": "^0.4.0",
+    "nsp": "^2.0.0",
+    "pre-commit": "^1.0.0",
     "standard-version": "^4.0.0",
-    "webpack": "^3.6.0",
+    "webpack": "^3.0.0",
     "webpack-defaults": "^1.6.0"
   },
   "peerDependencies": {
@@ -54,19 +53,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:coverage": "npm run test:coverage -- --runInBand",
-    "travis:test": "npm run test -- --runInBand",
     "travis:lint": "npm run lint && npm run security",
+    "travis:test": "npm run test -- --runInBand",
+    "travis:coverage": "npm run test:coverage -- --runInBand",
     "webpack-defaults": "webpack-defaults"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/webpack/file-loader.git"
-  },
-  "bugs": {
-    "url": "https://github.com/webpack/file-loader/issues"
-  },
-  "homepage": "https://github.com/webpack/file-loader",
+  "repository": "https://github.com/webpack/file-loader.git",
+  "bugs": "https://github.com/webpack/file-loader/issues",
+  "homepage": "https://webpack.js.org/loaders/file-loader",
   "pre-commit": "lint-staged",
   "lint-staged": {
     "*.js": [
