--- a/package.json
+++ b/package.json
@@ -4,13 +4,29 @@
   "author": "Tobias Koppers @sokra",
   "description": "file loader module for webpack",
   "license": "MIT",
-  "engines": {
-    "node": ">= 4.3 < 5.0.0 || >= 5.10"
-  },
   "main": "dist/cjs.js",
   "files": [
     "dist"
   ],
+  "scripts": {
+    "start": "npm run build -- -w",
+    "appveyor:test": "npm run test",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
+    "clean": "del-cli dist",
+    "lint": "eslint --cache src test",
+    "lint-staged": "lint-staged",
+    "prepublish": "npm run build",
+    "prebuild": "npm run clean",
+    "release": "standard-version",
+    "security": "nsp check",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "travis:lint": "npm run lint && npm run security",
+    "travis:test": "npm run test -- --runInBand",
+    "travis:coverage": "npm run test:coverage -- --runInBand",
+    "webpack-defaults": "webpack-defaults"
+  },
   "dependencies": {
     "loader-utils": "^1.0.2",
     "schema-utils": "^0.3.0"
@@ -33,30 +49,14 @@
     "nsp": "^2.0.0",
     "pre-commit": "^1.0.0",
     "standard-version": "^4.0.0",
-    "webpack": "^3.0.0",
+    "webpack": "^4.0.0-alpha.0",
     "webpack-defaults": "^1.6.0"
   },
   "peerDependencies": {
-    "webpack": "^2.0.0 || ^3.0.0"
+    "webpack": "^4.0.0-alpha.0 || ^4.0.0"
   },
-  "scripts": {
-    "start": "npm run build -- -w",
-    "appveyor:test": "npm run test",
-    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
-    "clean": "del-cli dist",
-    "lint": "eslint --cache src test",
-    "lint-staged": "lint-staged",
-    "prepublish": "npm run build",
-    "prebuild": "npm run clean",
-    "release": "standard-version",
-    "security": "nsp check",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:lint": "npm run lint && npm run security",
-    "travis:test": "npm run test -- --runInBand",
-    "travis:coverage": "npm run test:coverage -- --runInBand",
-    "webpack-defaults": "webpack-defaults"
+  "engines": {
+    "node": ">= 6 || >= 8"
   },
   "repository": "https://github.com/webpack/file-loader.git",
   "bugs": "https://github.com/webpack/file-loader/issues",
