Allow any version of webpack as a peerDependency
Webpack 4 alpha has been released. In preparation for v4,
it seems reasonable to change this to allow *. This should cut
down on maintenance and avoid unnecessarily blocking folks
from updating going forward.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "webpack-defaults": "^1.6.0"
   },
   "peerDependencies": {
-    "webpack": "^2.0.0 || ^3.0.0"
+    "webpack": "*"
   },
   "scripts": {
     "start": "npm run build -- -w",
