--- a/package.json
+++ b/package.json
@@ -9,51 +9,61 @@
     "dist"
   ],
   "scripts": {
+    "webpack-defaults": "webpack-defaults",
     "start": "npm run build -- -w",
-    "appveyor:test": "npm run test",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
     "clean": "del-cli dist",
+    "commitlint": "commitlint",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
+    "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
     "lint-staged": "lint-staged",
-    "prepublish": "npm run build",
     "prebuild": "npm run clean",
+    "prepublish": "npm run build",
     "release": "standard-version",
+    "release:ci": "conventional-github-releaser -p angular",
+    "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
     "security": "nsp check",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:lint": "npm run lint && npm run security",
-    "travis:test": "npm run test -- --runInBand",
-    "travis:coverage": "npm run test:coverage -- --runInBand",
-    "webpack-defaults": "webpack-defaults"
+    "ci:lint": "npm run lint && npm run security",
+    "ci:test": "npm run test -- --runInBand",
+    "ci:coverage": "npm run test:coverage -- --runInBand"
   },
   "dependencies": {
-    "loader-utils": "^1.0.2",
-    "schema-utils": "^0.3.0"
+    "loader-utils": "^1.1.0",
+    "schema-utils": "^0.4.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-jest": "^21.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.0.0",
-    "babel-polyfill": "^6.0.0",
-    "babel-preset-env": "^1.0.0",
-    "cross-env": "^5.0.0",
+    "@commitlint/cli": "^5.2.5",
+    "@commitlint/config-angular": "^5.1.1",
+    "@webpack-contrib/eslint-config-webpack": "^2.0.1",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "conventional-github-releaser": "^2.0.0",
+    "cross-env": "^5.1.1",
     "del": "^3.0.0",
-    "del-cli": "^1.0.0",
-    "eslint": "^4.0.0",
-    "eslint-config-webpack": "^1.0.0",
-    "eslint-plugin-import": "^2.0.0",
-    "jest": "^21.0.0",
-    "lint-staged": "^5.0.0",
-    "memory-fs": "^0.4.0",
-    "nsp": "^2.0.0",
-    "pre-commit": "^1.0.0",
-    "standard-version": "^4.0.0",
-    "webpack": "^4.0.0-alpha.0",
-    "webpack-defaults": "^1.6.0"
+    "del-cli": "^1.1.0",
+    "eslint": "^4.13.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "husky": "^0.14.3",
+    "jest": "^21.2.1",
+    "lint-staged": "^6.0.0",
+    "memory-fs": "^0.4.1",
+    "nsp": "^3.1.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "^1.9.2",
+    "standard-version": "^4.2.0",
+    "webpack": "^3.10.0",
+    "webpack-defaults": "^2.0.0-beta.1"
   },
   "peerDependencies": {
-    "webpack": "^4.0.0-alpha.0 || ^4.0.0"
+    "webpack": "^3.0.0 || ^4.0.0"
   },
   "engines": {
     "node": ">= 6.9.0 || >= 8.9.0"
