--- a/codecov.yml
+++ b/codecov.yml
@@ -1,13 +1,10 @@
 codecov:
   branch: master
-
 coverage:
   precision: 2
   round: down
   range: 70...100
-
   status:
-    project: no
-    patch: yes
-
+    project: 'no'
+    patch: 'yes'
 comment: 'off'
