--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "author": "Tobias Koppers @sokra",
   "homepage": "https://github.com/webpack-contrib/file-loader",
   "bugs": "https://github.com/webpack-contrib/file-loader/issues",
-  "bin": "",
   "main": "dist/cjs.js",
   "engines": {
-    "node": ">= 6.9.0 < 7.0.0 || >= 8.9.0"
+    "node": ">= 6.9.0 <7.0.0 || >= 8.9.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
@@ -19,20 +18,17 @@
     "commitlint": "commitlint",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
-    "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
-    "lint-staged": "lint-staged",
     "prebuild": "npm run clean",
-    "prepare": "npm run build",
+    "prepublish": "npm run build",
     "release": "standard-version",
-    "release:ci": "conventional-github-releaser -p angular",
-    "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
-    "security": "nsp check",
-    "test": "jest --env=node",
-    "test:watch": "jest --env=node --watch",
-    "test:coverage": "jest --env=node --collectCoverageFrom='src/**/*.js' --coverage",
+    "security": "npm audit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
     "ci:lint": "npm run lint && npm run security",
     "ci:test": "npm run test -- --runInBand",
     "ci:coverage": "npm run test:coverage -- --runInBand",
+    "ci:lint:commits": "commitlint --from=origin/master --to=${CIRCLE_SHA1}",
     "defaults": "webpack-defaults"
   },
   "files": [
@@ -46,41 +42,60 @@
     "schema-utils": "^1.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^6.1.3",
-    "@commitlint/config-conventional": "^6.1.3",
-    "@webpack-contrib/eslint-config-webpack": "^2.0.4",
-    "babel-cli": "^6.0.0",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-transform-object-rest-spread": "^6.0.0",
-    "babel-polyfill": "^6.0.0",
-    "babel-preset-env": "^1.0.0",
-    "conventional-github-releaser": "^2.0.2",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
+    "@webpack-contrib/defaults": "^3.0.0",
+    "@webpack-contrib/eslint-config-webpack": "^3.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "cross-env": "^5.0.0",
     "del": "^3.0.0",
     "del-cli": "^1.0.0",
-    "eslint": "^4.0.0",
-    "eslint-config-webpack": "^1.0.0",
+    "eslint": "^5.10.0",
     "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "husky": "^0.14.3",
-    "jest": "^22.4.3",
-    "lint-staged": "^7.0.4",
+    "eslint-plugin-prettier": "^3.0.0",
+    "husky": "^1.3.0",
+    "jest": "^23.6.0",
+    "lint-staged": "^8.1.0",
     "memory-fs": "^0.4.0",
-    "nsp": "^3.2.1",
-    "pre-commit": "^1.0.0",
     "prettier": "^1.11.1",
     "standard-version": "^4.0.0",
-    "webpack": "^4.5.0",
-    "webpack-defaults": "^2.3.0"
+    "webpack": "^4.5.0"
   },
   "keywords": [
     "webpack"
   ],
-  "pre-commit": "lint-staged",
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "6.9.0"
+          },
+          "useBuiltIns": "usage"
+        }
+      ]
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
       "git add"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
     ]
   }
 }
