fix: relax options validation for additional properties

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "memory-fs": "^0.4.0",
     "prettier": "^1.11.1",
     "standard-version": "^4.0.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.5.0"
   },
   "keywords": [
