--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
   "bugs": "https://github.com/webpack-contrib/file-loader/issues",
   "main": "dist/cjs.js",
   "engines": {
-    "node": ">= 6.9.0"
+    "node": ">= 8.9.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
-    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
-    "clean": "del-cli dist",
-    "commitlint": "commitlint",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
-    "lint": "eslint --cache src test",
     "prebuild": "npm run clean",
-    "prepublish": "npm run build",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore \"src/**/*.test.js\" --copy-files",
+    "clean": "del-cli dist",
+    "commitlint": "commitlint --from=master",
+    "lint:prettier": "prettier \"{**/*,*}.{js,json,md,yml,css}\" --list-different",
+    "lint:js": "eslint --cache src test",
+    "lint": "npm-run-all -l -p \"lint:**\"",
+    "prepare": "npm run build",
     "release": "standard-version",
     "security": "npm audit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "ci:lint": "npm run lint && npm run security",
-    "ci:test": "npm run test -- --runInBand",
-    "ci:coverage": "npm run test:coverage -- --runInBand",
-    "ci:lint:commits": "commitlint --from=origin/master --to=${CIRCLE_SHA1}",
+    "test:only": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --collectCoverageFrom=\"src/**/*.js\" --coverage",
+    "pretest": "npm run lint",
+    "test": "cross-env NODE_ENV=test npm run test:coverage",
     "defaults": "webpack-defaults"
   },
   "files": [
@@ -44,59 +43,31 @@
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.2",
-    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
-    "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "@webpack-contrib/defaults": "^3.0.0",
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "@webpack-contrib/defaults": "^5.0.0",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "cross-env": "^5.0.0",
-    "del": "^3.0.0",
-    "del-cli": "^1.0.0",
-    "eslint": "^5.10.0",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "husky": "^1.3.0",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.1.0",
-    "memory-fs": "^0.4.0",
-    "prettier": "^1.11.1",
-    "standard-version": "^4.0.0",
+    "babel-jest": "^24.8.0",
+    "commitlint-azure-pipelines-cli": "^1.0.2",
+    "cross-env": "^5.2.0",
+    "del": "^4.1.1",
+    "del-cli": "^2.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "husky": "^2.3.0",
+    "jest": "^24.8.0",
+    "jest-junit": "^6.4.0",
+    "lint-staged": "^8.1.7",
+    "memory-fs": "^0.4.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.17.1",
+    "standard-version": "^6.0.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.5.0"
+    "webpack": "^4.33.0"
   },
   "keywords": [
     "webpack"
-  ],
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "6.9.0"
-          },
-          "useBuiltIns": "usage"
-        }
-      ]
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  }
+  ]
 }
