--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "Tobias Koppers @sokra",
   "homepage": "https://github.com/webpack-contrib/file-loader",
   "bugs": "https://github.com/webpack-contrib/file-loader/issues",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/webpack"
+  },
   "main": "dist/cjs.js",
   "engines": {
     "node": ">= 10.13.0"
@@ -46,7 +50,7 @@
     "@babel/preset-env": "^7.7.4",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@webpack-contrib/defaults": "^6.1.0",
+    "@webpack-contrib/defaults": "^6.2.0",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^24.9.0",
     "commitlint-azure-pipelines-cli": "^1.0.2",
